Changed landing image background position to relative to stop overlapping text on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@ of those sections to manage the look and feel of the site. */
 	background-size: cover;
 	
 	background-repeat: no-repeat;
-    background-position: center center;
+    background-position: relative;
     background-attachment:fixed;
 }
 
